# amigotest

./: .gitmodules  CMakeLists.txt  amigo_camera.c  amigo_camera.h  amigo_lcd_ips.c  amigo_lcd_ips.h  amigo_powercfg.c  amigo_powercfg.h  amigo_touch.c  amigo_touch.h  config.cmake  lvgl_srcs.cmake  main.c
cfg/: lv_conf.h
cmake/Modules/Platform/: YuniK210Maix.cmake
